Update to new version in C++

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,12 @@
 cmake_minimum_required(VERSION 3.10.0)
-project(SigGen VERSION 0.1.0 LANGUAGES C)
+project(AutoInstrumentControl VERSION 0.1.0 LANGUAGES C CXX)
 
-add_executable(SigGen main.c DG4202.c serial.c)
+add_executable(AutoInstrumentControl main.cpp 
+    ./SignalGenerator/SigGen.cpp 
+    ./SignalGenerator/DG4202.cpp)
 
 include_directories("C:/Program Files/IVI Foundation/VISA/Win64/Include")
 
-target_link_libraries(SigGen PRIVATE "C:/Program Files/IVI Foundation/VISA/Win64/Lib_x64/msc/visa64.lib")
-target_link_libraries(SigGen PRIVATE "C:/Program Files/IVI Foundation/VISA/Win64/Lib_x64/msc/visa32.lib")
-target_link_libraries(SigGen PRIVATE "C:/Program Files/IVI Foundation/VISA/Win64/Lib_x64/msc/nivisa64.lib")
+target_link_libraries(AutoInstrumentControl PRIVATE "C:/Program Files/IVI Foundation/VISA/Win64/Lib_x64/msc/visa64.lib")
+target_link_libraries(AutoInstrumentControl PRIVATE "C:/Program Files/IVI Foundation/VISA/Win64/Lib_x64/msc/visa32.lib")
+target_link_libraries(AutoInstrumentControl PRIVATE "C:/Program Files/IVI Foundation/VISA/Win64/Lib_x64/msc/nivisa64.lib")
